added get request, fixed cors

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Brian Guterl",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "nedb": "^1.8.0"
   }
